<resources>
    <string name="cmd_Cancel_In_TV">Cancel_In_TV</string>
    <string name="cmd_Change_Input_In_TV">Change_Input_In_TV</string>
    <string name="cmd_Decrease_Volume">Decrease_Volume</string>
    <string name="cmd_Decrease_Volume_In_TV">Decrease_Volume_In_TV</string>
    <string name="cmd_Exit_In_TV">Exit_In_TV</string>
    <string name="cmd_Exit_In_Xbox">Exit_In_Xbox</string>
    <string name="cmd_Fast_Forward_In_Media_Center">Fast_Forward_In_Media_Center</string>
    <string name="cmd_Fast_Forward_In_Xbox">Fast_Forward_In_Xbox</string>
    <string name="cmd_Go_Back_In_Media_Center">Go_Back_In_Media_Center</string>
    <string name="cmd_Go_Down_In_Media_Center">Go_Down_In_Media_Center</string>
    <string name="cmd_Go_Down_In_TV">Go_Down_In_TV</string>
    <string name="cmd_Go_Down_In_Xbox">Go_Down_In_Xbox</string>
    <string name="cmd_Go_Left_In_Media_Center">Go_Left_In_Media_Center</string>
    <string name="cmd_Go_Left_In_TV">Go_Left_In_TV</string>
    <string name="cmd_Go_Left_In_Xbox">Go_Left_In_Xbox</string>
    <string name="cmd_Go_Right_In_Media_Center">Go_Right_In_Media_Center</string>
    <string name="cmd_Go_Right_In_TV">Go_Right_In_TV</string>
    <string name="cmd_Go_Right_In_Xbox">Go_Right_In_Xbox</string>
    <string name="cmd_Go_To_DVD_Menu_In_Media_Center">Go_To_DVD_Menu_In_Media_Center</string>
    <string name="cmd_Go_To_Home_In_Media_Center">Go_To_Home_In_Media_Center</string>
    <string name="cmd_Go_To_Last_Channel_In_TV">Go_To_Last_Channel_In_TV</string>
    <string name="cmd_Go_To_Next_In_Media_Center">Go_To_Next_In_Media_Center</string>
    <string name="cmd_Go_To_Xbox_In_Game">Go_To_Xbox_In_Game</string>
    <string name="cmd_Go_To_Playstation_In_Game">Go_To_Playstation_In_Game</string>
    <string name="cmd_Go_To_Wii_In_Game">Go_To_Wii_In_Game</string>
    <string name="cmd_Go_To_PC_In_Game">Go_To_PC_In_Game</string>
    <string name="cmd_Go_To_VC_In_Game">Go_To_VC_In_Game</string>
    <string name="cmd_Go_To_VC_Secondary_In_Game">Go_To_VC_Secondary_In_Game</string>
    <string name="cmd_Turn_Game_On">Turn_Game_On</string>
    <string name="cmd_Enter_In_Cable">Enter_In_Cable</string>
    <string name="cmd_Fast_Forward_In_Cable">Fast_Forward_In_Cable</string>
    <string name="cmd_Go_Back_In_Cable">Go_Back_In_Cable</string>
    <string name="cmd_Go_Down_In_Cable">Go_Down_In_Cable</string>
    <string name="cmd_Search_In_Cable">Search_In_Cable</string>
    <string name="cmd_Go_Left_In_Cable">Go_Left_In_Cable</string>
    <string name="cmd_Go_Right_In_Cable">Go_Right_In_Cable</string>
    <string name="cmd_Go_Up_In_Cable">Go_Up_In_Cable</string>
    <string name="cmd_Play_In_Cable">Play_In_Cable</string>
    <string name="cmd_Rewind_In_Cable">Rewind_In_Cable</string>
    <string name="cmd_Select_In_Cable">Select_In_Cable</string>
    <string name="cmd_Show_Info_In_Cable">Show_Info_In_Cable</string>
    <string name="cmd_Go_To_Home_In_Cable">Go_To_Home_In_Cable</string>
    <string name="cmd_Fast_Forward_In_AmazonTV">Fast_Forward_In_AmazonTV</string>
    <string name="cmd_Go_Back_In_AmazonTV">Go_Back_In_AmazonTV</string>
    <string name="cmd_Go_Down_In_AmazonTV">Go_Down_In_AmazonTV</string>
    <string name="cmd_Search_In_AmazonTV">Search_In_AmazonTV</string>
    <string name="cmd_Go_Left_In_AmazonTV">Go_Left_In_AmazonTV</string>
    <string name="cmd_Go_Right_In_AmazonTV">Go_Right_In_AmazonTV</string>
    <string name="cmd_Go_Up_In_AmazonTV">Go_Up_In_AmazonTV</string>
    <string name="cmd_Play_In_AmazonTV">Play_In_AmazonTV</string>
    <string name="cmd_Rewind_In_AmazonTV">Rewind_In_AmazonTV</string>
    <string name="cmd_Select_In_AmazonTV">Select_In_AmazonTV</string>
    <string name="cmd_Menu_In_AmazonTV">Menu_In_AmazonTV</string>
    <string name="cmd_Go_To_Home_In_AmazonTV">Go_To_Home_In_AmazonTV</string>
    <string name="cmd_Go_To_SVTPlay_In_AmazonTV">Go_To_SVTPlay_In_AmazonTV</string>
    <string name="cmd_Go_To_Netflix_In_AmazonTV">Go_To_Netflix_In_AmazonTV</string>
    <string name="cmd_Go_To_Amazon_In_AmazonTV">Go_To_Amazon_In_AmazonTV</string>
    <string name="cmd_Go_To_Disney_In_AmazonTV">Go_To_Disney_In_AmazonTV</string>
    <string name="cmd_Go_To_Amazon_In_Cable">Go_To_Amazon_In_Cable</string>
    <string name="cmd_Go_To_Plex_In_Cable">Go_To_Plex_In_Cable</string>
    <string name="cmd_Go_To_Youtube_In_Cable">Go_To_Youtube_In_Cable</string>
    <string name="cmd_Go_To_Hulu_In_Cable">Go_To_Hulu_In_Cable</string>
    <string name="cmd_Go_To_Apple_In_Cable">Go_To_Apple_In_Cable</string>
    <string name="cmd_Go_To_HBO_In_Cable">Go_To_HBO_In_Cable</string>
    <string name="cmd_Go_To_Discovery_In_Cable">Go_To_Discovery_In_Cable</string>
    <string name="cmd_Go_To_Paramount_In_Cable">Go_To_Paramount_In_Cable</string>
    <string name="cmd_Go_To_Disney_In_Cable">Go_To_Disney_In_Cable</string>
    <string name="cmd_Go_To_TED_In_Cable">Go_To_TED_In_Cable</string>
    <string name="cmd_Go_To_Netflix_In_Cable">Go_To_Netflix_In_Cable</string>
    <string name="cmd_Turn_Cable_On">Turn_Cable_On</string>
    <string name="cmd_Go_Up_In_Media_Center">Go_Up_In_Media_Center</string>
    <string name="cmd_Go_Up_In_TV">Go_Up_In_TV</string>
    <string name="cmd_Go_Up_In_Xbox">Go_Up_In_Xbox</string>
    <string name="cmd_Increase_Volume">Increase_Volume</string>
    <string name="cmd_Increase_Volume_In_TV">Increase_Volume_In_TV</string>
    <string name="cmd_Make_It_Louder">Make_It_Louder</string>
    <string name="cmd_Make_It_Quieter">Make_It_Quieter</string>
    <string name="cmd_Make_The_TV_Louder">Make_The_TV_Louder</string>
    <string name="cmd_Make_The_TV_Quieter">Make_The_TV_Quieter</string>
    <string name="cmd_DRC">DRC</string>
    <string name="cmd_Mute">Mute</string>
    <string name="cmd_Mute_In_TV">Mute_In_TV</string>
    <string name="cmd_Page_Down_In_Media_Center">Page_Down_In_Media_Center</string>
    <string name="cmd_Page_Up_In_Media_Center">Page_Up_In_Media_Center</string>
    <string name="cmd_Pause_In_Media_Center">Pause_In_Media_Center</string>
    <string name="cmd_Pause_In_Xbox">Pause_In_Xbox</string>
    <string name="cmd_Play_In_Media_Center">Play_In_Media_Center</string>
    <string name="cmd_Play_In_Xbox">Play_In_Xbox</string>
    <string name="cmd_Play_Movies_In_Media_Center">Play_Movies_In_Media_Center</string>
    <string name="cmd_Play_Music_In_Media_Center">Play_Music_In_Media_Center</string>
    <string name="cmd_Play_Next_Audio_In_Media_Center">Play_Next_Audio_In_Media_Center</string>
    <string name="cmd_Play_TV_In_Media_Center">Play_TV_In_Media_Center</string>
    <string name="cmd_Power_Off">Power_Off</string>
    <string name="cmd_Preess_Dash_In_TV">Preess_Dash_In_TV</string>
    <string name="cmd_Press_A_In_XBox">Press_A_In_XBox</string>
    <string name="cmd_Press_B_In_XBox">Press_B_In_XBox</string>
    <string name="cmd_Press_Blue_In_TV">Press_Blue_In_TV</string>
    <string name="cmd_Press_Eight_In_TV">Press_Eight_In_TV</string>
    <string name="cmd_Press_Eight_In_XBox">Press_Eight_In_XBox</string>
    <string name="cmd_Press_Eject_In_Xbox">Press_Eject_In_Xbox</string>
    <string name="cmd_Press_Enter_In_Xbox">Press_Enter_In_Xbox</string>
    <string name="cmd_Press_Five_In_TV">Press_Five_In_TV</string>
    <string name="cmd_Press_Five_In_XBox">Press_Five_In_XBox</string>
    <string name="cmd_Press_Four_In_TV">Press_Four_In_TV</string>
    <string name="cmd_Press_Four_In_XBox">Press_Four_In_XBox</string>
    <string name="cmd_Press_Green_In_TV">Press_Green_In_TV</string>
    <string name="cmd_Press_Hash_In_TV">Press_Hash_In_TV</string>
    <string name="cmd_Press_Nine_In_TV">Press_Nine_In_TV</string>
    <string name="cmd_Press_Nine_In_XBox">Press_Nine_In_XBox</string>
    <string name="cmd_Press_One_In_TV">Press_One_In_TV</string>
    <string name="cmd_Press_One_In_XBox">Press_One_In_XBox</string>
    <string name="cmd_Press_Red_In_TV">Press_Red_In_TV</string>
    <string name="cmd_Press_Seven_In_TV">Press_Seven_In_TV</string>
    <string name="cmd_Press_Seven_In_XBox">Press_Seven_In_XBox</string>
    <string name="cmd_Press_Six_In_TV">Press_Six_In_TV</string>
    <string name="cmd_Press_Six_In_XBox">Press_Six_In_XBox</string>
    <string name="cmd_Press_Star_In_TV">Press_Star_In_TV</string>
    <string name="cmd_Press_Three_In_TV">Press_Three_In_TV</string>
    <string name="cmd_Press_Three_In_XBox">Press_Three_In_XBox</string>
    <string name="cmd_Press_Two_In_TV">Press_Two_In_TV</string>
    <string name="cmd_Press_Two_In_XBox">Press_Two_In_XBox</string>
    <string name="cmd_Press_View_In_Xbox">Press_View_In_Xbox</string>
    <string name="cmd_Press_X_In_Xbox">Press_X_In_Xbox</string>
    <string name="cmd_Press_XBox_In_Xbox">Press_XBox_In_Xbox</string>
    <string name="cmd_Press_Y_In_Xbox">Press_Y_In_Xbox</string>
    <string name="cmd_Press_Yellow_In_TV">Press_Yellow_In_TV</string>
    <string name="cmd_Press_Zero_In_TV">Press_Zero_In_TV</string>
    <string name="cmd_Press_Zero_In_XBox">Press_Zero_In_XBox</string>
    <string name="cmd_Return_In_TV">Return_In_TV</string>
    <string name="cmd_Rewind_In_Media_Center">Rewind_In_Media_Center</string>
    <string name="cmd_Rewind_In_Xbox">Rewind_In_Xbox</string>
    <string name="cmd_Select_Game_Mode_In_TV">Select_Game_Mode_In_TV</string>
    <string name="cmd_Select_In_Media_Center">Select_In_Media_Center</string>
    <string name="cmd_Select_In_TV">Select_In_TV</string>
    <string name="cmd_Select_In_Xbox">Select_In_Xbox</string>
    <string name="cmd_Show_Audio_Menu_In_Media_Center">Show_Audio_Menu_In_Media_Center</string>
    <string name="cmd_Show_Closed_Caption_In_TV">Show_Closed_Caption_In_TV</string>
    <string name="cmd_Show_Context_Menu_In_Media_Center">Show_Context_Menu_In_Media_Center</string>
    <string name="cmd_Show_Favorite_In_TV">Show_Favorite_In_TV</string>
    <string name="cmd_Show_Format_In_TV">Show_Format_In_TV</string>
    <string name="cmd_Show_Guide_In_TV">Show_Guide_In_TV</string>
    <string name="cmd_Show_Info_In_Media_Center">Show_Info_In_Media_Center</string>
    <string name="cmd_Show_Info_In_TV">Show_Info_In_TV</string>
    <string name="cmd_Show_Menu_In_Media_Center">Show_Menu_In_Media_Center</string>
    <string name="cmd_Show_Menu_In_TV">Show_Menu_In_TV</string>
    <string name="cmd_Show_Menu_In_Xbox">Show_Menu_In_Xbox</string>
    <string name="cmd_Show_Next_Channel_In_TV">Show_Next_Channel_In_TV</string>
    <string name="cmd_Show_Next_Channel_In_XBox">Show_Next_Channel_In_XBox</string>
    <string name="cmd_Show_Next_Subtitle_In_Media_Center">Show_Next_Subtitle_In_Media_Center</string>
    <string name="cmd_Show_Option_In_TV">Show_Option_In_TV</string>
    <string name="cmd_Show_Previous_Channel_In_TV">Show_Previous_Channel_In_TV</string>
    <string name="cmd_Show_Previous_Channel_In_XBox">Show_Previous_Channel_In_XBox</string>
    <string name="cmd_Show_Split_View_In_Xbox">Show_Split_View_In_Xbox</string>
    <string name="cmd_Show_Three_D_In_TV">Show_Three_D_In_TV</string>
    <string name="cmd_Show_Video_Menu_In_Media_Center">Show_Video_Menu_In_Media_Center</string>
    <string name="cmd_Show_Viera_In_TV">Show_Viera_In_TV</string>
    <string name="cmd_Show_Viera_Link_In_TV">Show_Viera_Link_In_TV</string>
    <string name="cmd_Show_Viera_Tools_In_TV">Show_Viera_Tools_In_TV</string>
    <string name="cmd_Sleep_In_Tv">Sleep_In_Tv</string>
    <string name="cmd_Step_Back_In_Media_Center">Step_Back_In_Media_Center</string>
    <string name="cmd_Step_Back_In_Xbox">Step_Back_In_Xbox</string>
    <string name="cmd_Step_Forward_In_Media_Center">Step_Forward_In_Media_Center</string>
    <string name="cmd_Step_Forward_In_Xbox">Step_Forward_In_Xbox</string>
    <string name="cmd_Stop_In_Xbox">Stop_In_Xbox</string>
    <string name="on">On</string>
    <string name="nanit">Nanit</string>
    <string name="nest">Nest</string>
    <string name="sense">Sense</string>
    <string name="other">Other...</string>
    <string name="browser">Browser</string>
</resources>